# ariac_team

./: .gitignore  CLAUD.md  Dockerfile  README.md  docker-compose.yml
ariac_team/ariac_team/: __init__.py  robots.py
ariac_team/ariac_team/nodes/: mvp_coordinator.py
ariac_team/ariac_team/pipeline/: base.py  stages.py
ariac_team/config/: ariac_team_config.yaml
docker/: start_.sh  start_mvp.sh  start_vnc.sh
docs/: design_notes.md  environment_setup.md  launch_guide.md
example_team/: package.xml  setup.cfg  setup.py
example_team/config/: example_team_config.yaml
example_team/example_team/: environment_interface.py  gripper_interface.py  move_robots.py  robot_interface.py  robots.py  utils.py
moveit_configs/assembly_robot_1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/assembly_robot_2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/gantry_welder_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/inspection_robot_1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/inspection_robot_2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ariac_team/: package.xml  setup.cfg  setup.py
src/ariac_team/ariac_team/: environment.py
src/ariac_team/ariac_team/pipeline/: __init__.py  stages.py
src/ariac_team/config/trials/: conveyor_to_tester.yaml  tester_to_agv.yaml
src/ariac_team/launch/: mvp_smoke.launch.py
src/ariac_team/resource/: ariac_team
src/ariac_team/tests/: test_pipeline.py
src/example_team/: package.xml  setup.py
(+58 files in other folders)
