<?xml version="1.0"?>
<package format="3">
  <name>ariac_team</name>
  <version>0.1.0</version>
  <description>MVP pipeline and configuration for the ARIAC 2025 inspection task.</description>
  <maintainer email="team@example.com">ariac_team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ariac_interfaces</depend>

  <exec_depend>example_team</exec_depend>
  <exec_depend>ariac_gz</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
